--- a/Chat_System/package.json
+++ b/Chat_System/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node backrnd/server.js"
+    "start": "nodemon backend/server.js"
   },
   "author": "nazia",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   }
 }
