--- a/Chat_System/package.json
+++ b/Chat_System/package.json
@@ -9,8 +9,12 @@
   "author": "nazia",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "framer-motion": "^10.0.1",
     "nodemon": "^2.0.20"
   }
 }
