--- a/Chat_System/package.json
+++ b/Chat_System/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "framer-motion": "^10.0.1",
+    "mongoose": "^7.0.0",
     "nodemon": "^2.0.20"
   }
 }
