--- a/AuthInMern-Authentication-In-MERN/client/package.json
+++ b/AuthInMern-Authentication-In-MERN/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "bootstrap": "^5.2.3",
+    "express-validator": "^6.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
