--- a/Fiverr/api/package.json
+++ b/Fiverr/api/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.2",
     "stripe": "^11.17.0"
   }
 }
