--- a/Fiver/client/package.json
+++ b/Fiver/client/package.json
@@ -25,9 +25,14 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^3.0.0",
     "eslint": "^8.33.0",
     "eslint-plugin-react": "^7.32.2",
-    "vite": "^4.0.0"
-  }
+    "vite": "^4.3.8"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "vite.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
