--- a/Fiver/client/package.json
+++ b/Fiver/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.0",
     "@tanstack/react-query": "^4.28.0",
